 + Base: Started working on a better interface for administration. (index.php, PrettyUrls.php, chrome.css etc)
 & Base: Include language strings for all settings. (ModSettings.php)
 + Base: Enable/disable filters through the admin interface. (PrettyUrls.php, PrettyUrls.template.php)
 % Merged the actions and profiles packages into the Base package, disabled by default.

Pretty URLs 0.7                                                    June 12, 2007
================================================================================
 + Base: Romanise Vietnamese, Croatian, Hiragana and Katakana. (Subs-PrettyUrls.php)
 % Started the profiles package.
 ! Base: URLs in <link> tags and feeds should be rewritten too. (QueryString.php, News.php)
 ! Base: Fixed a broken query in Subs-Post.php.
 ! Base: Don't use 301 redirections if rewriting isn't enabled! (Display.php, MessageIndex.php)
 ! Base: Hopefully fixed the queries to work in MySQL 3.34. (install.php)
 ! Base: Fixed some wrong variables in Subs-Boards.php, weird...

Pretty URLs 0.6                                                      May 2, 2007
================================================================================
 + Base: Use pretty URLs in redirectExit(). (Subs.php)
 + Base: Added the updateFilters() and filterAndHtaccessSettings() functions. (Subs-PrettyUrls.php, PrettyUrls-Filters.php)
 ! Base: Fixed a missing global in generatePrettyUrl(). (Subs-PrettyUrls.php)
 + Base: Filter board urls. (PrettyUrls-Filters.php)
 + Base: Allow permanent redirects. (Subs.php)
 + Base: Filter topic urls. (PrettyUrls-Filters.php)
 ! Base: Don't try to rewrite urls once the code has been removed! (uninstall.php)
 - Base: Remove the pretty_url column from the topics table as it's no longer needed. (install.php)
 ! Base: Update the synchroniseTopicUrls() function for the above change. (Subs-PrettyUrls.php)