@@ -35,6 +35,7 @@ Pretty URLs 0.8                                                    ??
  & Base: Include language strings for all settings. (ModSettings.php)
  + Base: Enable/disable filters through the admin interface. (PrettyUrls.php, PrettyUrls.template.php)
  % Merged the actions and profiles packages into the Base package, disabled by default.
+ ! Base: Allow individual actions to have specific buffer URL search patterns, used just by feeds for now. (QueryString.php, News.php)
 
 Pretty URLs 0.7                                                    June 12, 2007
 ================================================================================
